# VocalShaper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  linkEnv.bat  linkLib.bat  linkLibd.bat  prePacking.bat
.github/: FUNDING.yml
.github/workflows/: OnPush-Debug-Windows-MSVC.yml  OnPush.yml  buildArtifacts.yml  cmake.yml
JuceFix/: fix.cpp  juce_Panner.cpp
JuceLibraryCode/: CMakeLists.txt  JuceHeader.h
app/: SearchPlugin.bat  main.lua
app/data/config/: function.json  keyMapping.xml  output.aif.json  output.aiff.json  output.bwf.json  output.flac.json  output.mp3.json  output.ogg.json  startup.json  sysstat.json  time.json
app/layouts/: Debug.json  Default.json
app/licenses/: ARAExtension.txt  ASIO-SDK.txt  SynthEngineDemo.txt  VST2-SDK.txt
app/lua/ui/: AlertStyle.lua  AudioDebugger.lua  Config.lua  FlowStyle.lua  MIDIDebugger.lua  MenuStyle.lua  StartMenu.lua
app/splash/: Pinellia.json
app/synth-engines/: README.txt
app/themes/Colorful/: colors.json  config.json
app/translates/en-US/: config.txt
app/translates/zh-CN/: about.txt  alert.txt  audio.txt  config.json  config.txt  flowUI.txt  main.txt  menu.txt
docs/: audio.drawio
fileRegistrar/: FileRegApp.cpp  SystemUtils.cpp  SystemUtils.h
pluginSearcher/: PluginSearcher.cpp  PluginSearcher.h  PluginSearcherApp.cpp
scripts/ci/: findBinary.ps1  prePacking.ps1
scripts/vcpkg-manifest/: vcpkg-configuration.json  vcpkg.json
src/: crash.cpp  crash.h  leak.cpp  leak.h  lua.hpp  main.cpp
src/audioCore/: AC_API.cpp  AC_API.h  AudioCommand.cpp  AudioCommand.h  AudioConfig.cpp  AudioConfig.h  AudioCore.cpp  AudioCore.h  AudioDebugger.cpp  AudioDebugger.h  AudioIOList.cpp  AudioIOList.h  AudioPluginSearchThread.cpp  AudioPluginSearchThread.h  Channel.cpp  Channel.h  CloneableAudioSource.cpp  CloneableAudioSource.h  CloneableMIDISource.cpp  CloneableMIDISource.h  CloneableSource.cpp  CloneableSource.h  CloneableSourceManager.cpp  CloneableSourceManager.h  CloneableSynthSource.cpp  CloneableSynthSource.h  CommandAdd.cpp  CommandClear.cpp  CommandEcho.cpp  CommandList.cpp  CommandLoad.cpp  CommandOther.cpp  CommandRemove.cpp  CommandSave.cpp  CommandSearch.cpp  CommandSet.cpp  CommandUtils.h  Crash.c  Crash.cpp  Crash.hpp  (+34 more)
src/audioCore/action/: ActionAdd.cpp  ActionAdd.h  ActionBase.cpp  ActionBase.h  ActionDispatcher.cpp  ActionDispatcher.h  ActionEcho.cpp  ActionEcho.h  ActionList.cpp  ActionList.h  ActionOther.cpp  ActionOther.h  ActionRemove.cpp  ActionRemove.h  ActionSet.cpp  ActionSet.h  ActionUndoableBase.cpp  ActionUndoableBase.h  ActionUtils.h  Actions.h
src/audioCore/ara/: ARAArchive.cpp  ARAArchive.h  ARAChangeListener.cpp  ARAChangeListener.h  ARAController.cpp  ARAController.h  ARADataIOThread.cpp  ARADataIOThread.h  ARAGlobalState.cpp  ARAGlobalState.h  ARAObjects.cpp  ARAObjects.h  ARASharedObject.h  ARAVirtualDocument.cpp  ARAVirtualDocument.h
src/audioCore/command/: AudioCommand.cpp  AudioCommand.h  CommandAdd.cpp  CommandEcho.cpp  CommandExport.cpp  CommandList.cpp  CommandLoad.cpp  CommandOther.cpp  CommandRemove.cpp  CommandSave.cpp  CommandSet.cpp  CommandUtils.h
src/audioCore/debug/: AudioDebugger.cpp  AudioDebugger.h  CommandOutputComponent.cpp  CommandOutputComponent.h  MIDIDebugger.cpp  MIDIDebugger.h
src/audioCore/graph/: MainGraph.cpp  MainGraph.h  MixerGraph.cpp  PluginDecorator.cpp  PluginDecorator.h  PluginDock.cpp  PluginDock.h  SendGraph.cpp  SeqGraph.cpp  SeqSourceProcessor.cpp  SeqSourceProcessor.h  SourceList.cpp  SourceList.h  SourceRecordProcessor.cpp  SourceRecordProcessor.h  Track.cpp  Track.h
src/audioCore/luce/: AudioCore.cpp  AudioCore.h
src/audioCore/misc/: ARAController.cpp  ARAController.h  ARAObjects.cpp  ARAObjects.h  ARAVirtualDocument.cpp  ARAVirtualDocument.h  AudioFormatMeta.h  AudioLock.cpp  AudioLock.h  Counter.cpp  Counter.h  Device.cpp  Device.h  MackieControlHub.cpp  MackieControlHub.h  PlayPosition.cpp  PlayPosition.h  PlayWatcher.cpp  PlayWatcher.h  Renderer.cpp  Renderer.h  SourceIO.cpp  SourceIO.h  SynthThread.cpp  SynthThread.h  TempoTemp.cpp  TempoTemp.h  VMath.cpp  VMath.h
src/audioCore/plugin/: AudioPluginSearchThread.cpp  Plugin.cpp  Plugin.h  PluginLoadThread.cpp  PluginLoadThread.h  PluginLoader.cpp  PluginLoader.h
src/audioCore/project/: ProjectInfoData.cpp  ProjectInfoData.h  Serializable.cpp  Serializable.h  SerializeConfig.h
src/audioCore/quickAPI/: QuickAPI.h  QuickCheck.cpp  QuickCheck.h  QuickGet.cpp  QuickGet.h  QuickSet.cpp  QuickSet.h
src/audioCore/recovery/: ActionType.hpp  Arena.c  Arena.h  Data.c  Data.cpp  DataControl.hpp  DataGet.h  DataWrite.hpp
src/audioCore/source/: AudioIOList.cpp  AudioIOList.h  CloneableAudioSource.cpp  CloneableAudioSource.h  CloneableMIDISource.cpp  CloneableMIDISource.h  CloneableSource.cpp  CloneableSource.h  CloneableSourceManager.cpp  CloneableSourceManager.h  CloneableSourceManagerTemplates.h  CloneableSynthSource.cpp  CloneableSynthSource.h  SourceIO.cpp  SourceIO.h  SourceInternalContainer.cpp  SourceInternalContainer.h  SourceInternalPool.cpp  SourceInternalPool.h  SourceItem.cpp  SourceItem.h  SourceMIDITemp.cpp  SourceMIDITemp.h  SourceManager.cpp  SourceManager.h  SynthRenderThread.cpp  SynthRenderThread.h
src/audioCore/uiCallback/: LimitedCall.cpp  LimitedCall.h  UICallback.cpp  UICallback.h  UICallbackType.h
src/rc/: resource.h  resources.rc
src/ui/: Utils.cpp  Utils.h
src/ui/component/: AboutComponent.cpp  AboutComponent.h  AboutWindow.cpp  AboutWindow.h  ChannelLinkView.cpp  ChannelLinkView.h  ColorEditor.cpp  ColorEditor.h  CompManager.cpp  CompManager.h  ConfigComponent.cpp  ConfigComponent.h  ConfigPropertyComponents.cpp  ConfigPropertyComponents.h  ConfigWindow.cpp  ConfigWindow.h  ControllerComponent.cpp  ControllerComponent.h  EffectComponent.cpp  EffectComponent.h  FaderBase.cpp  FaderBase.h  InstrComponent.cpp  InstrComponent.h  InstrIOComponent.cpp  InstrView.h  (+75 more)
test/: testAudioRecord.lua  testEffect.lua  testInstr.lua  testMidiRecord.lua  testMisc.lua  testPlugin.lua  testSource.lua
(+280 files in other folders)
